Revision history for Perl extension MooX::BuildArgs.

{{$NEXT}}

0.02 2015-12-29
 - Add MooX::MethodProxyArgs.
 - Use Test::Stream for tests.
 - Make BuildArgsHooks future compatibility tests work if the test
   hooks are called.

0.01 2014-11-07
 - First release.
